# cge-tools

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build_dmg.sh  format-all.sh  tasks.sh
.github/: CONTRIBUTING.md  (+2 more)
cge/: CMakeLists.txt  cge.h  cgeFilters.h  cgePlatform.h
cge/core/: cgeCommonDefine.cpp  cgeCommonDefine.h  cgeGLFunctions.cpp  cgeGLFunctions.h  cgeGeometryUtils.cpp  cgeGlobal.cpp  cgeGlobal.h  cgeImageFilter.cpp  cgeImageHandler.cpp  cgeMat.h  cgeShaderFunctions.cpp  cgeShaderFunctions.h  cgeStaticAssert.h  cgeTextureUtils.h
cge/filters/: cgeAdvancedEffects.cpp  cgeAdvancedEffects.h  cgeAdvancedEffectsCommon.cpp  cgeAdvancedEffectsCommon.h  cgeAlienLookFilter.h  cgeBeautifyFilter.h  cgeBilateralBlurFilter.cpp  cgeBilateralBlurFilter.h  cgeBlendFilter.cpp  cgeBlendFilter.h  cgeBorderEffects.cpp  cgeBorderEffects.h  cgeBordersCommon.cpp  cgeBordersCommon.h  cgeBordersDataset.cpp  cgeBrightnessAdjust.h  cgeCardEffects.h  cgeColorBalanceAdjust.h  cgeColorLevelAdjust.cpp  cgeColorLevelAdjust.h  cgeColorMappingFilter.cpp  cgeColorMappingFilter.h  cgeContrastAdjust.cpp  cgeContrastAdjust.h  cgeCrosshatchFilter.cpp  cgeCrosshatchFilter.h  cgeCurveAdjust.cpp  cgeCurveAdjust.h  cgeDataParsingEngine.cpp  cgeDataParsingEngine.h  cgeDistortionFilter.cpp  cgeDistortionFilter.h  cgeDynamicFilters.cpp  cgeDynamicFilters.h  cgeDynamicWaveFilter.cpp  cgeDynamicWaveFilter.h  cgeEdgeExtract.cpp  cgeEdgeExtract.h  cgeEdgeFilter.cpp  cgeEmbossFilter.cpp  (+71 more)
cge/include/cge/: cge.h  filters.h  platform.h
cge/platform/: cgePlatform_GLEW.h  cgePlatform_QT.cpp  cgePlatform_QT.h
cge/sprite/: cgeScene.h  cgeSprite2d.cpp  cgeSprite2d.h  cgeSprite3d.cpp  cgeSprite3d.h  cgeSpriteCommon.cpp  cgeSpriteCommon.h
cge/src/animation/: cgeAction.cpp  cgeAction.h  cgeAnimation.cpp  cgeAnimation.h
cge/src/core/: cgeCommonDefine.cpp  cgeCommonDefine.h  cgeGLFunctions.cpp  cgeGLFunctions.h  cgeGeometryUtils.cpp  cgeGeometryUtils.h  cgeGlobal.cpp  cgeGlobal.h  cgeImageFilter.cpp  cgeImageFilter.h  cgeImageHandler.cpp  cgeImageHandler.h  cgeMat.h  cgeShaderFunctions.h  cgeTextureUtils.cpp  cgeTextureUtils.h  cgeVec.h
cge/src/extend/: cgeExtendFunc.cpp  cgeExtendFunc.h  cgeExtends.cpp  cgeExtends.h  cgeThread.h
cge/src/extend/thread/: cgeThread.cpp
cge/src/extend/video/: cgeFFmpegHeaders.h  cgeVideoDecoder.cpp  cgeVideoDecoder.h  cgeVideoEncoder.cpp  cgeVideoEncoder.h  cgeVideoExt.cpp  cgeVideoExt.h  cgeVideoPlayer.cpp  cgeVideoPlayer.h  cgeVideoUtils.cpp  cgeVideoUtils.h
cge/src/filters/adjustments/: cgeAdvancedEffects.cpp  cgeAdvancedEffects.h  cgeBlendFilter.cpp  cgeBlendFilter.h  cgeBorderEffects.cpp  cgeBorderEffects.h  cgeBrightnessAdjust.cpp  cgeBrightnessAdjust.h  cgeCardEffects.cpp  cgeCardEffects.h  cgeColorBalanceAdjust.cpp  cgeColorBalanceAdjust.h  cgeColorLevelAdjust.h  cgeColorMappingFilter.cpp  cgeColorMappingFilter.h  cgeContrastAdjust.h  cgeCurveAdjust.cpp  cgeCurveAdjust.h  cgeDataParsingEngine.cpp  cgeDataParsingEngine.h  cgeDistortionFilter.cpp  cgeDistortionFilter.h  cgeDynamicFilters.cpp  cgeDynamicWaveFilter.h  cgeExposureAdjust.cpp  cgeExposureAdjust.h  cgeFilterBasic.cpp  cgeFilterBasic.h  cgeHistogramFilter.h  cgeHueAdjust.cpp  cgeHueAdjust.h  cgeLiquidationFilter.cpp  cgeLiquidationFilter.h  cgeLookupFilter.cpp  cgeLookupFilter.h  cgeMaxValueFilter.cpp  cgeMaxValueFilter.h  cgeMidValueFilter.cpp  cgeMidValueFilter.h  cgeMinValueFilter.cpp  (+22 more)
cge/src/filters/beauty/: cgeBeautifyFilter.cpp  cgeBeautifyFilter.h  cgeEnlargeEyeFilter.cpp  cgeEnlargeEyeFilter.h  cgeEyeBrightenFilter.h  cgeEyeTintFilter.cpp  cgeEyeTintFilter.h  cgeFaceBlendFilter.cpp  cgeFaceBlendFilter.h  cgeMarscaraFilter.h  cgeRedeyeRemoveFilter.h  cgeTeethWhitenFilter.h  cgeWrinkleRemoverFilter.h
cge/src/filters/blur/: cgeBilateralBlurFilter.cpp  cgeBilateralBlurFilter.h  cgeFastTiltShift.cpp  cgeFastTiltShift.h  cgeGaussianBlurFilter.cpp  cgeGaussianBlurFilter.h  cgeLerpblurFilter.cpp  cgeLerpblurFilter.h  cgeMosaicBlurFilter.cpp  cgeMosaicBlurFilter.h  cgeRandomBlurFilter.h
cge/src/platform/: cgePlatform_GLEW.h  cgePlatform_IOS.h  cgePlatform_QT.cpp  cgePlatform_QT.h
cge/src/sprite/: cgeParticleSystem.h  cgeScene.h  cgeSprite2d.cpp  cgeSprite2d.h  cgeSprite3d.cpp  cgeSprite3d.h  cgeSpriteCommon.cpp  cgeSpriteCommon.h
cge/utils/: cgeThread.cpp  cgeThread.h
examples/: CMakeLists.txt  README.md  simple_filter.cpp
filterGenerator/: CMakeLists.txt  Info.plist.in  filterGenerator.desktop.in  filterGenerator.icns  filterGenerator.qrc  filterGenerator.rc  filterRuleTest.desktop.in  filterRuleTest.icns  filterRuleTest.rc  filterRuleTestMain.cpp  gen_icns.sh  main.cpp
filterGenerator/ui/: HSLAdjustWidget.ui  HSVAdjustWidget.ui  LerpBlurWidget.ui  basicAdjustWidget.ui  bilateralBlurWidget.ui  blurSharpenAdjustWidget.ui  brightnessAdjustWidget.ui  colorBalanceAdjustWidget.ui  colorBlendWidget.ui  colorLevelAdjustWidget.ui  colorLookupWidget.ui  colorMappingWidget.ui  colorMulWidget.ui  contrastAdjustWidget.ui  crosshatchWidget.ui  curveAdjustWidget.ui  edgeWidget.ui  embossWidget.ui  exportWidget.ui  exposureAdjustWidget.ui  faceEffectTool.ui  filterruletest.ui  halftoneWidget.ui  hazeWidget.ui  hueAdjustWidget.ui  mainwindow.ui  monochromeAdjustWidget.ui  polkadotWidget.ui  previewApplyWidget.ui  resultDock.ui  saturationAdjustWidget.ui  selectiveColorAdjustWidget.ui  shadowHighlightWidget.ui  sketchWidget.ui  styleAdjustWidget.ui  textureBlendWidget.ui  vignetteAdjustWidget.ui  waveAdjustWidget.ui  whiteBalanceAdjustWidget.ui
filterGenerator/widgets/: FaceEffectToolWindow.cpp  FaceEffectToolWindow.h  basicAdjustWidget.cpp  basicAdjustWidget.h  canvasWidget.cpp  canvasWidget.h  colorBlendWidget.cpp  colorBlendWidget.h  colorMulWidget.cpp  colorMulWidget.h  curveAdjustWidget.cpp  curveAdjustWidget.h  filterAdjustWidgetBase.h  filterRuleTest.cpp  filterruletest.h  mainwindow.cpp  mainwindow.h  menuWidget.cpp  menuWidget.h  resultWidget.cpp  resultWidget.h  styleAdjustWidget.cpp  styleAdjustWidget.h  textureBlendWidget.cpp  textureBlendWidget.h  toolWidget.cpp  toolWidget.h
(+59 files in other folders)
